--- a/product-service/package.json
+++ b/product-service/package.json
@@ -7,6 +7,12 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.1",
+
+    "@aws-sdk/client-dynamodb": "^3.600.0",
+    "@aws-sdk/lib-dynamodb": "^3.600.0",
+    "aws-cdk-lib": "2.145.0",
+    "aws-lambda": "^1.0.7"
   }
 }
