--- a/product-service/package.json
+++ b/product-service/package.json
@@ -3,16 +3,14 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.10",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "uuid": "^9.0.1",
-
     "@aws-sdk/client-dynamodb": "^3.600.0",
+    "@aws-sdk/client-sns": "^3.609.0",
     "@aws-sdk/lib-dynamodb": "^3.600.0",
     "aws-cdk-lib": "2.145.0",
-    "aws-lambda": "^1.0.7"
+    "aws-lambda": "^1.0.7",
+    "uuid": "^9.0.1"
   }
 }
